# RealtimeSTT-mac

./: .gitignore  CLAUDE.md  LICENSE  README.md  faster_whisper_models.json  model_registry.json  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.py  test_apple_silicon_wake_word.py  test_stella_model.py
DevUtils/: README.md  benchmark_config.json  benchmarks.json  config.example.json  convert_and_benchmark_models.py  create_test_audio.py  model_selection.json
RealtimeSTT/: __init__.py  audio_input.py  audio_recorder.py  audio_recorder_client.py  safepipe.py
docs/: configuration.md
tests/: advanced_talk.py  feed_audio.py  install_packages.py  openai_voice_interface.py  openwakeword_test.py  quick_validation.py  realtime_loop_test.py  realtimestt_chinese.py  realtimestt_speechendpoint.py  realtimestt_speechendpoint_binary_classified.py  realtimestt_test.py  realtimestt_test_hotkeys_v2.py  realtimestt_test_stereomix.py  recorder_client.py  simple_test.py  test_apple_silicon_wake_word.py  test_stella_model.py  type_into_textbox.py  vad_test.py
wheels/: ctranslate2-4.6.0+accelerate-cp311-cp311-macosx_15_0_arm64.whl  ctranslate2-4.6.0+accelerate-cp312-cp312-macosx_15_0_arm64.whl  ctranslate2-4.6.0-cp310-cp310-macosx_15_0_arm64.whl  ctranslate2-4.6.0-cp311-cp311-macosx_15_0_universal2.whl  ctranslate2-4.6.0-cp312-cp312-macosx_15_0_arm64.whl
